syntax = "proto3";
package pstake.lscosmos.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "pstake/lscosmos/v1beta1/lscosmos.proto";

option go_package = "github.com/persistenceOne/pstake-native/x/lscosmos/types";

option (gogoproto.equal_all) = true;
option (gogoproto.stringer_all) = false;
option (gogoproto.goproto_getters_all) = false;

// RegisterHostChainProposal defines the details needed to register cosmos chain for
// liquid staking transactions through lscosmos module
message RegisterHostChainProposal {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  bool  module_enabled = 3;
  string chain_i_d = 4;
  string connection_i_d = 5;
  string transfer_channel = 6;
  string transfer_port = 7;
  string base_denom = 8;
  string mint_denom = 9;
  string min_deposit = 10 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  AllowListedValidators allow_listed_validators = 11 [(gogoproto.nullable) = false];
  string pstake_deposit_fee = 12 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string pstake_restake_fee = 13 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string pstake_unstake_fee = 14 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}
